<resources>
    <string name="app_name">Checkbook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_Category">Category</string>
    <string name="edit_Tag">Enter the item</string>
    <string name="edit_Amount">Enter the amount spent</string>
    <string name="button_submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="textTag">Details:</string>
    <string name="textAmount">Amount:</string>
    <string name="textCategory">Category:</string>
    <string name="button_view">View</string>
    <string name="delete_all">Delete All</string>
    <string name="viewFood">Food Only</string>
    <string name="textViewBalance">Balance:</string>
    <string name="textAdd">Add:</string>
    <string name="button_add">Add</string>
    <string name="button_reset">Reset</string>
    <string name="FoodLabel">Food</string>
    <string name="BillsLabel">Bills</string>
    <string name="TransportationLabel">Transportation</string>
    <string name="MiscLabel">Misc.</string>
    <string name="BalanceLabel">My Balance</string>
    <string name="EntertainmentLabel">Entertainment</string>
    <string name="ListDataLabel">All Transactions</string>
    <string name="textShake">Shake Me!</string>
    <string name="updateButton">Update</string>
    <string name="details">Details:</string>
    <string name="delete">Delete</string>
    <string name="Progress" >Progress</string>
    <string name="button_history">History</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Transportation</item>
        <item>Bills</item>
        <item>Misc</item>
    </string-array>

</resources>
