<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/balConLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="117dp"
        android:layout_height="41dp"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="34dp"
        android:text="@string/textViewBalance"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textActBal"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="34dp"
        android:text="@string/textAdd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="125dp"
        android:layout_height="46dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.29" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:text="@string/button_add"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_reset"
        app:layout_constraintLeft_toRightOf="@+id/button_reset"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_marginTop="41dp"
        android:text="@string/button_reset"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_add"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</android.support.constraint.ConstraintLayout>